--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = EPublisher-Source-Plugin-MetaCPAN
-author  = Renee Baecker <module@renee-baecker.de>
+author  = Renee Baecker <module@renee-baecker.de>, Boris Daeppen <boris_daeppen@bluewin.ch>
 license = Artistic_2_0
 copyright_holder = Renee Bäcker, Boris Däppen
 copyright_year   = 2012
