--- a/dist.ini
+++ b/dist.ini
@@ -23,7 +23,11 @@ copyright_year   = 2012
 [Prereqs]
 EPublisher = 0.3
 File::Basename = 0
+File::Find = 0
 File::Glob = 0
 File::Spec = 0
 File::Temp = 0
 MetaCPAN::API = 0
+Test::More = 0
+Test::Pod = 1.14
+Test::Pod::Coverage = 1.08
